cmake_minimum_required(VERSION 3.17)
project(bbp LANGUAGES CXX CUDA)
find_package(CUDAToolkit)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
#arch must be changed to match your GPU
set(CMAKE_CUDA_ARCHITECTURES 86)

find_package(Boost 1.70.0 EXACT COMPONENTS system chrono)
IF(0)
	set(OPENSSL_USE_STATIC_LIBS TRUE)
	find_package(OpenSSL REQUIRED)

	add_executable(bbp main.cpp bbpLauncher.cpp digitData.cpp restClientDelegator.cpp progressData.cpp kernel.cu)
	target_link_libraries(bbp Boost::system Boost::chrono OpenSSL::SSL OpenSSL::Crypto)
ELSE()
	add_definitions(-DNO_BOOST)
	add_executable(bbp main.cpp bbpLauncher.cpp digitData.cpp progressData.cpp kernel.cu)
ENDIF()
target_link_libraries(bbp CUDA::cudart)
